@@ -1,3 +1,8 @@
+2004-11-16  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-std__ipv6.adb:
+	(Peer_Addr): Better show IPv4-mapped-on-IPv6 addresses.
+
 2004-11-15  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* src/check_config.c:
